<resources>
    <string name="version">v1.0.0</string>
    <string name="app_name">Music Player</string>
    <string name="music">Music</string>
    <string name="time_picker_separator" translatable="false">:</string>
    <string name="time_picker_increment_minute_button">Increment minute</string>
    <string name="time_picker_decrement_minute_button">Decrement minute</string>
    <string name="time_picker_increment_hour_button">Increment hour</string>
    <string name="time_picker_decrement_hour_button">Decrement hour</string>
    <string name="time_picker_increment_set_pm_button">Set PM</string>
    <string name="time_picker_decrement_set_am_button">Set AM</string>
    <string name="main_title">Library</string>
    <string name="sleep_15">15 minutes</string>
    <string name="sleep_30">30 minutes</string>
    <string name="sleep_45">45 minutes</string>
    <string name="sleep_60">1 hour</string>
    <string name="sleep_more">Manual Setting</string>
    <string name="sleep_0">None</string>
    <string name="device_adapter">Device</string>
    <string name="volume_effect">Volume Effects</string>
    <string name="standard_headset">Standard Headset</string>
    <string name="standard_earphone">Standard Earphone</string>
    <string name="earphone">Earphone</string>
    <string name="headset">Headset</string>
    <string name="speaker">Speaker</string>
    <string name="adjust">Adjust</string>
    <string name="enable_preset_recommend">Enable to use volume effect</string>
    <string name="rock">Rock</string>
    <string name="effect_custom">Custom</string>
    <string name="normal">Normal</string>
    <string name="classical">Classical</string>
    <string name="dance">Dance</string>
    <string name="flat">Flat</string>
    <string name="folk">Folk</string>
    <string name="heavy_metal">Heavy Metal</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="pop">Pop</string>
    <string name="message">Message</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="tab_song">Song</string>
    <string name="tab_album">Album</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_folder">Folder</string>
    <string name="drawer_all_song">All Songs</string>
    <string name="drawer_playlists">PlayLists</string>
    <string name="drawer_favorites">Favorites</string>
    <string name="drawer_recently">Recently played</string>
    <string name="drawer_folder">Folder</string>
    <string name="drawer_setting">Settings</string>
    <string name="artist_info">Artist :</string>
    <string name="title_info">Title :</string>
    <string name="total_count">Total %d song(s)</string>
    <string name="alphabetically">Alphabetically↑</string>
    <string name="alphabetically_desc">Alphabetically ↓</string>
    <string name="date">Date↑</string>
    <string name="search_result_title">Search Result</string>
    <string name="search_result_content">%d songs found</string>
    <string name="from_aplayer">From APlayer</string>
    <string name="about">About APlayer</string>
    <string name="model_random">Shuffle</string>
    <string name="model_repeat">Repeat</string>
    <string name="model_normal">Loop</string>
    <string name="unknown_song">Unknown song</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>
    <string name="eq_initial_failed">Equalizer initialization failed</string>
    <string name="use_eq">Use equalizer</string>
    <string name="plz_earphone">Please plug in headphones</string>
    <string name="back">Return</string>
    <string name="feedback">APlayer opinion and feedback</string>
    <string name="my_favorite">My favorite</string>
    <string name="db_my_favorite" translatable="false">My favorite</string>
    <string name="list_is_empty">List is empty</string>
    <string name="folder">Folder</string>
    <string name="recently">Recently Added</string>
    <string name="continue_play">Resume</string>
    <string name="pause_play">Pause</string>
    <string name="no_song">No songs</string>
    <string name="share_error">Share failed</string>
    <string name="share_success">Share success</string>
    <string name="share_cancel">Share cancel</string>
    <string name="plz_input_sharecontent">Please input the content of share</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="input_playlist_name">Please input the name of playlist</string>
    <string name="song_lose_effect">The song is not available</string>
    <string name="add_playlist_success">Create playlist success</string>
    <string name="rename_playlist_success">Rename playlist success</string>
    <string name="add_playlist_error">Create playlist failed</string>
    <string name="playlist_already_exist">The playlist already exists</string>
    <string name="add_error">Add failed</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_song_playlist_success">Add %1$d songs into %2$s</string>
    <string name="add_song_my_favorite_success">Add %1$d songs into My favorite</string>
    <string name="already_exists_songs_in_favorite">Songs already exist in My favorite</string>
    <string name="already_exists_songs_in_playlist">Songs already exist in %1$s</string>
    <string name="delete_song_playlist_success">Delete %1$d songs into %2$s</string>
    <string name="delete_multi_song">Remove %d songs</string>
    <string name="add_song_playqueue_success">Add %1$d songs into playing queue </string>
    <string name="add_song_playlist_error">Add songs to playlist failed</string>
    <string name="delete_song_playlist_error">Delete songs to playlist failed</string>
    <string name="load_playlist_error">Load playlist failed</string>
    <string name="confirm_delete_from_playlist_or_library">Confirm to remove from %s?</string>
    <string name="delete_success">Remove success</string>
    <string name="delete_error">Remove failed</string>
    <string name="set_ringtone_success">Set as ringtone success</string>
    <string name="set_ringtone_error">Set as ringtone failed</string>
    <string name="set_success">Apply success</string>
    <string name="plz_set_correct_time">Please set the correct time</string>
    <string name="cancel_success">Cancel success</string>
    <string name="play_randomly">Play randomly(%d)</string>
    <string name="play_random">shuffle all(%d)</string>
    <string name="scan_tip">The audio file that is larger than this setting will appear in the song library</string>
    <string name="search_hint">Search song artist album</string>
    <string name="no_search_result">No result</string>
    <string name="create_playlist">Create playlist...</string>
    <string name="use_system_color">Use the system background color</string>
    <string name="use_black_color">Use the black background color</string>
    <string name="play_queue">Playing queue(%d)</string>
    <string name="choose_song">Choose song</string>
    <string name="choose_no_song">No songs were selected</string>
    <string name="set_album_cover_error">Set album cover failed</string>
    <string name="set_artist_cover_error">Set artist cover failed</string>
    <string name="set_playlist_cover_error">Set playlist cover failed</string>
    <string name="new_folder">New folder</string>
    <string name="choose_folder">Choose </string>
    <string name="setting_success">Set success</string>
    <string name="setting_error">Set failed</string>
    <string name="search_error">Search failed</string>
    <string name="song_not_empty">The name of the song cannot be empty</string>
    <string name="save_success">Save Success</string>
    <string name="save_error">Save failed</string>
    <string name="save_error_arg">Save failed: %s</string>
    <string name="arg_illegal">Parameter illegal: %d</string>
    <string name="send_success">Sent successfully.Thanks to your feedback!</string>
    <string name="send_error">Sent failed: %s</string>
    <string name="screenshot_save_at">The screenshot has been saved to %s</string>
    <string name="not_install_weibo">You haven\'t installed Weibo </string>
    <string name="create_dir_error">Create folder failed</string>
    <string name="need_permission">App needs necessary permissions</string>
    <string name="play_now">Playing: %s</string>
    <string name="default_lrc_path">Default behavior is to scan all lyric files</string>
    <string name="lrc_tip">%s</string>
    <string name="cache_size">%1$2.2f MB</string>
    <string name="confirm_clear_cache">Confirm to clear cache?</string>
    <string name="mylove_cant_edit">My favorite is not editable</string>
    <string name="error">Error</string>
    <string name="share_to">Share to</string>
    <string name="qq">QQ</string>
    <string name="weibo">Weibo</string>
    <string name="wechat">Wechat</string>
    <string name="circlefriend">Moments</string>
    <string name="record_share">Share as poster</string>
    <string name="share">Share</string>
    <string name="timer">Sleep with music</string>
    <string name="as_default">Set as default</string>
    <string name="close">Close</string>
    <string name="timer_info_1">"Sleep Timer" set time as default</string>
    <string name="timer_info_2">After the "Sleep Timer" time is set as the default, the next time you click the timer stop button, the timer will be directly started according to the previously set time. \n\nIf you want to change the time of "Timed Stop", click the Timed Stop button twice to enter the setting page.</string>
    <string name="input_feedback_content">Please input the feedback</string>
    <string name="playing">Now playing</string>
    <string name="set_filter_size">Set the size of filter</string>
    <string name="delete">Remove</string>
    <string name="edit">Edit</string>
    <string name="transfer">Transfer</string>
    <string name="ring">Ringtone</string>
    <string name="add">Add</string>
    <string name="update_error">Update error: %s</string>
    <string name="update_ignore">This version has been ignored for update</string>
    <string name="no_update">Current version is newest</string>
    <string name="search">Search</string>
    <string name="timer_close">Sleep timer</string>
    <string name="feedback_contact_hint">Please enter your contact information</string>
    <string name="lrc_choose">Choose the source of the lyric</string>
    <string name="manual_scan">Manual scan</string>
    <string name="shake">Shake</string>
    <string name="shake_tip">Lashing for song</string>
    <string name="headset_tip">Headset key control</string>
    <string name="lyric_tip">Desktop lyrics</string>
    <string name="wake_up">Wake up</string>
    <string name="keep_screen_tip">Keep the screen lit in play window</string>
    <string name="support_develop">Support development</string>
    <string name="confirm_delete_songs">Would you like to delete selected music(s)?</string>
    <string name="setting">Settings</string>
    <string name="please_input_song_name">Please input song name</string>
    <string name="please_input_album">Please input album</string>
    <string name="please_input_artist">Please input artist</string>
    <string name="please_input_year">Please input year</string>
    <string name="please_input_genre">Please input genre</string>
    <string name="manual_scan_tip">Please make sure that the scan directory without .nomedia file(Hidden file)</string>
    <string name="lyric">Lyric</string>
    <string name="please_input_track_number">Please input track number</string>
    <string name="exit">Exit</string>
    <string name="theme">Theme</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
</resources>