<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/d160_size"
    android:background="@drawable/round_gray_top">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d20_size"
        android:layout_marginTop="@dimen/d24_size"
        android:layout_marginEnd="@dimen/d20_size"
        android:text="@string/confirm_delete_songs"
        android:textAlignment="center"
        android:textColor="@color/light_text_color_primary"
        android:textSize="@dimen/s20_size"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="@dimen/d130_size"
        android:layout_height="@dimen/d36_size"
        android:layout_marginTop="@dimen/d24_size"
        android:layout_marginBottom="@dimen/d24_size"
        android:background="@drawable/bg_round_24_ripple"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/light_text_color_primary"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/title" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="@dimen/d130_size"
        android:layout_height="@dimen/d36_size"
        android:background="@drawable/bg_round_24_ripple"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/light_text_color_primary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="@id/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>