<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/container_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/d50_size"
                    android:text="@string/setting"
                    android:textAlignment="center"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/title_text_size" />

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/setting_shake_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_rect_ripple"
            android:paddingTop="@dimen/d10_size"
            android:paddingBottom="@dimen/d10_size">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16_size"
                android:layout_marginRight="@dimen/d16_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d2_size"
                    android:text="@string/shake"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/s16_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shake_tip"
                    android:textColor="?attr/text_color_secondary"
                    android:textSize="@dimen/s14_size" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_shake_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/d14_size"
                android:clickable="false"
                android:textOff=""
                android:textOn=""
                android:theme="@style/CustomSwitch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_wakeup_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_rect_ripple"
            android:paddingTop="@dimen/d10_size"
            android:paddingBottom="@dimen/d10_size">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16_size"
                android:layout_marginRight="@dimen/d16_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d2_size"
                    android:text="@string/wake_up"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/s16_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_screen_tip"
                    android:textColor="?attr/text_color_secondary"
                    android:textSize="@dimen/s14_size" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_wakeup_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/d14_size"
                android:clickable="false"
                android:textOff=""
                android:textOn=""
                android:theme="@style/CustomSwitch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_headset_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_rect_ripple"
            android:paddingTop="@dimen/d10_size"
            android:paddingBottom="@dimen/d10_size">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16_size"
                android:layout_marginRight="@dimen/d16_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d2_size"
                    android:text="@string/headset"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/s16_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headset_tip"
                    android:textColor="?attr/text_color_secondary"
                    android:textSize="@dimen/s14_size" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_headset_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/d14_size"
                android:clickable="false"
                android:textOff=""
                android:textOn=""
                android:theme="@style/CustomSwitch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_lyric_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_rect_ripple"
            android:paddingTop="@dimen/d10_size"
            android:paddingBottom="@dimen/d10_size">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16_size"
                android:layout_marginRight="@dimen/d16_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d2_size"
                    android:text="@string/lyric"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/s16_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lyric_tip"
                    android:textColor="?attr/text_color_secondary"
                    android:textSize="@dimen/s14_size" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/setting_lyric_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/d14_size"
                android:clickable="false"
                android:textOff=""
                android:textOn=""
                android:theme="@style/CustomSwitch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting_scan_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background_rect_ripple"
            android:paddingTop="@dimen/d10_size"
            android:paddingBottom="@dimen/d10_size">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d16_size"
                android:layout_marginRight="@dimen/d16_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d2_size"
                    android:text="@string/manual_scan"
                    android:textColor="@color/light_text_color_primary"
                    android:textSize="@dimen/s16_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manual_scan_tip"
                    android:textColor="?attr/text_color_secondary"
                    android:textSize="@dimen/s14_size" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>