<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/container_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        android:textAlignment="center"
        android:textColor="@color/light_text_color_primary"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintTop_toTopOf="parent" />

    <me.khrystal.library.widget.CircleRecyclerView
        android:id="@+id/circleRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="@dimen/d100_size"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@drawable/round_gray_top"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_gallery" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_text_color_primary"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/gallery" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_text_color_primary"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:text="@string/camera" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>